--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,24 @@
                 <groupId>org.apache.ignite</groupId>
                 <artifactId>ignite-spring</artifactId>
                 <version>${ignite.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>h2</artifactId>
+                        <groupId>com.h2database</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.197</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
